--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,120 @@
-/* You can add global styles to this file, and also import other style files */
+*
+    box-sizing: border-box
+    padding: 0
+    margin: 0
+body
+    margin: 2em
+    background-image: url('../imgs/background.jpg')
+    color: #333
+    font-family: Cambria, Georgia, serif
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    height: 100%
+    text-align: center
+
+    .hero-shadow
+        margin: 0
+        padding: 0
+        position: absolute
+        top: 0
+        left: 0
+        background: rgba(0,0,0,0.5)
+        height: 100%
+        width: 100%
+        z-index: -1
+h1
+    color: #a0b9e9
+    width: 100%
+    font-family: 'Caveat', cursive
+    font-size: 12vw
+    letter-spacing: 5px
+    border-radius: 5px
+
+h2
+    color: #eeeeee
+    font-family: Arial, Helvetica, sans-serif
+    font-weight: lighter
+    font-size: 50px
+
+
+span
+    display: block
+    color: white
+
+.dropdownContainer
+    display: flex
+
+    select
+        color: whitesmoke
+        background: rgb(168,200,233)
+        background: linear-gradient(360deg, #546575 0%, rgba(38,148,235,1) 100%)
+        outline: none !important
+        border: none !important
+        box-shadow: none !important
+        margin: 1rem auto
+        padding: 3px
+        border-radius: 10px
+        height: 45px
+        width: 180px
+        font-size: 20px
+        text-align: center
+        letter-spacing: 3px
+
+        option
+
+            text-decoration: none
+            font-size: 16px
+            border: none
+            background-color: #546575
+            color: white
+
+.detailsContainer
+    font-family: 'Caveat', cursive
+    margin: 2rem auto
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
+    h2
+        font-size: 60px
+        font-family: 'Caveat', cursive
+        text-shadow: 0 5px 5px black
+        padding: 0px 30px
+        // width: 100vw
+        border-radius: 10px
+        background-color: rgba(0, 0, 0, 0.3)
+        box-shadow: 5px 5px 10px black
+
+    img
+        position: relative
+        max-width: 300px
+        margin: 20px
+        box-shadow: 0px 10px 20px black
+        transition: transform .3s
+        cursor: zoom-in
+
+
+    img:hover
+        z-index: 10
+        transform: scale(2)
+
+    p
+        font-size: 50px
+        color: white
+        text-shadow: 0 5px 5px black
+        padding: 0 15px
+        width: 100vw
+        border-radius: 10px
+        background-color: rgba(0, 0, 0, 0.3)
+        // box-shadow: 5px 5px 10px black
+    a
+        text-decoration: none
+        color: lightblue
+        font-weight: bold
+        transition: .3s
+
+    a:hover
+        color: lightgreen
