--- a/src/styles.sass
+++ b/src/styles.sass
@@ -26,11 +26,12 @@ body
         z-index: -1
 h1
     color: #a0b9e9
-    width: 100%
+    // width: 100%
     font-family: 'Caveat', cursive
     font-size: 12vw
     letter-spacing: 5px
     border-radius: 5px
+    text-shadow: 5px 5px 10px #182325 
 
 h2
     color: #eeeeee
@@ -83,7 +84,6 @@ span
         font-family: 'Caveat', cursive
         text-shadow: 0 5px 5px black
         padding: 0px 30px
-        // width: 100vw
         border-radius: 10px
         background-color: rgba(0, 0, 0, 0.3)
         box-shadow: 5px 5px 10px black
