--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,40 +5,30 @@
 body
     margin: 2em
     background-image: url('../imgs/background.jpg')
+    background-attachment: fixed
+    background-size: cover
     color: #333
     font-family: Cambria, Georgia, serif
     display: flex
     flex-direction: column
     justify-content: center
     align-items: center
-    height: 100%
+    // height: 100%
     text-align: center
 
-    .hero-shadow
-        margin: 0
-        padding: 0
-        position: absolute
-        top: 0
-        left: 0
-        background: rgba(0,0,0,0.5)
-        height: 100%
-        width: 100%
-        z-index: -1
 h1
     color: #a0b9e9
-    // width: 100%
     font-family: 'Caveat', cursive
     font-size: 12vw
     letter-spacing: 5px
     border-radius: 5px
-    text-shadow: 5px 5px 10px #182325 
+    text-shadow: 5px 5px 10px #182325
 
 h2
     color: #eeeeee
     font-family: Arial, Helvetica, sans-serif
     font-weight: lighter
     font-size: 50px
-
 
 span
     display: block
@@ -85,8 +75,8 @@ span
         text-shadow: 0 5px 5px black
         padding: 0px 30px
         border-radius: 10px
-        background-color: rgba(0, 0, 0, 0.3)
-        box-shadow: 5px 5px 10px black
+        background-color: rgba(0, 0, 0, 0.4)
+        box-shadow: 0px 0px 20px black
 
     img
         position: relative
@@ -96,7 +86,6 @@ span
         transition: transform .3s
         cursor: zoom-in
 
-
     img:hover
         z-index: 10
         transform: scale(2)
@@ -105,11 +94,11 @@ span
         font-size: 50px
         color: white
         text-shadow: 0 5px 5px black
-        padding: 0 15px
-        width: 100vw
+        width: 70vw
         border-radius: 10px
-        background-color: rgba(0, 0, 0, 0.3)
-        // box-shadow: 5px 5px 10px black
+        background-color: rgba(0, 0, 0, 0.5)
+        box-shadow: 0px 0px 10px black
+
     a
         text-decoration: none
         color: lightblue
